--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li><a href="/"><i class="fab fa-google fa-fw fa-lg"></i></a></li>
         <li><a href="/"><i class="fab fa-maxcdn fa-fw fa-lg"></i></a></li>
       </ul>
-      <p class="small">WE <i class="fa fa-heart fa-fw"></i> YOUR MOM
+      <p class="small">YOU <i class="fa fa-heart fa-fw"></i> ARE WELCOME
       </p>
     </header><a class="topbtn page-scroll" href="#page-top"></a>
     <!-- jQuery-->
